# shutil-ext

./: LICENSE  README.md  pyproject.toml
src/shutil_ext/: __about__.py  __init__.py
tests/: __init__.py
