[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shutil-ext"
dynamic = ["version"]
description = 'shutil extensions'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Xiang Wang", email = "ramwin@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["duration2>=0.7.1"]

[project.urls]
Documentation = "https://github.com/Xiang Wang/shutil-ext#readme"
Issues = "https://github.com/Xiang Wang/shutil-ext/issues"
Source = "https://github.com/Xiang Wang/shutil-ext"

[tool.hatch.version]
path = "src/shutil_ext/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/shutil_ext tests}"

[tool.coverage.run]
source_pkgs = ["shutil_ext", "tests"]
branch = true
parallel = true
omit = [
  "src/shutil_ext/__about__.py",
]

[tool.coverage.paths]
shutil_ext = ["src/shutil_ext", "*/shutil-ext/src/shutil_ext"]
tests = ["tests", "*/shutil-ext/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.setuptools.package-data]
shutil_ext = ["src/shutil_ext/py.typed"]
